--- a/app/src/main/res/layout/fragment_not_connected.xml
+++ b/app/src/main/res/layout/fragment_not_connected.xml
@@ -10,7 +10,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:gravity="center"
-        android:text="Your are not connected."
+        android:text="@string/not_connected"
         android:textAlignment="center" />
 
 </FrameLayout>
