--- a/app/src/main/res/layout/renderer.xml
+++ b/app/src/main/res/layout/renderer.xml
@@ -23,7 +23,7 @@
                 android:id="@+id/rendererTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Title" />
+                android:text="@string/title" />
 
             <Space
                 android:layout_width="wrap_content"
@@ -56,7 +56,7 @@
             android:id="@+id/rendererLastUpdate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="asdasd"
+            android:text="@string/empty"
             android:textSize="10sp" />
     </LinearLayout>
 
