--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -15,12 +15,12 @@
             <item
                 android:id="@+id/action_add_item"
                 android:icon="@drawable/ic_menu_add"
-                android:title="Add item"
+                android:title="@string/action_add_item"
                 app:showAsAction="never"></item>
             <item
                 android:id="@+id/action_reorder_items"
                 android:icon="@drawable/ic_menu_reorder"
-                android:title="Reorder items"
+                android:title="@string/action_reorder_items"
                 app:showAsAction="never" />
             <item
                 android:id="@+id/action_settings"
