Refactored widget hierarchy to update sections.

--- a/app/src/main/res/layout/activity_button_renderer_edit.xml
+++ b/app/src/main/res/layout/activity_button_renderer_edit.xml
@@ -67,12 +67,11 @@
 
                 </LinearLayout>
 
-                <ListView
+                <LinearLayout
                     android:id="@+id/buttonRendererEditList"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                </ListView>
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"></LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
