--- a/app/src/main/res/layout/activity_dropdown_renderer_edit.xml
+++ b/app/src/main/res/layout/activity_dropdown_renderer_edit.xml
@@ -66,10 +66,11 @@
 
                 </LinearLayout>
 
-                <ListView
+                <LinearLayout
                     android:id="@+id/dropdownRendererEditList"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"></LinearLayout>
 
             </LinearLayout>
 
