--- a/app/src/main/res/layout/activity_section_renderer_edit.xml
+++ b/app/src/main/res/layout/activity_section_renderer_edit.xml
@@ -50,7 +50,18 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8sp"
-                        android:hint="@string/title" />
+                        android:hint="@string/section_title" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/sectionRendererEditTopic"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Topic (optional)" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <Space
